--- a/tethysapp/hydroviewer_central_america/templates/hydroviewer_central_america/ecmwf.html
+++ b/tethysapp/hydroviewer_central_america/templates/hydroviewer_central_america/ecmwf.html
@@ -136,10 +136,7 @@
                 </div>
                 <div class="flex-container-row"><img id="view-file-loading" class="view-file hidden" src="{% static base_name|add:'/images/loader.gif' %}" /></div>
                 <div id="long-term-chart"></div>
-                <table id="mytable">
-                  <tbody id="tbody">
-                  </tbody>
-                </table>
+                <div id="mytable"></div>
               </div>
             </div>
           </div> <!-- /.tab-pane -->
